Corrige elemento do machado e 8a linha

--- a/roguelike.html
+++ b/roguelike.html
@@ -202,7 +202,8 @@
       <td></td>
       <td></td>
       <td class="orc">O</td>
-      <td class="wall"><span class="axe">T</span></td>
+      <td class="wall axe">T</td>
+      <td></td>
       <td></td>
       <td></td>
       <td></td>
